<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidAttendanceSystem V2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="homepage">HomePage</string>
    <string name="back">Back</string>
    <string name="logout">Logout</string>
    <string name="view_attendance">View Attendance</string>
    <string name="view_total_attendance">View Total Attendance</string>
    <string name="subject">Subject</string>
    <string name="add_attendance">Add Attendance</string>

</resources>
