<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/clg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:text="Select dept"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="106dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="76dp"
        android:layout_toRightOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner1"
        android:layout_marginTop="34dp"
        android:layout_toLeftOf="@+id/spinner1"
        android:text="Select year"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/spinnerSE"
        android:layout_width="108dp"
        android:layout_height="51dp"
        android:layout_below="@+id/spinneryear"
        android:layout_alignLeft="@+id/spinneryear" />

    <Spinner
        android:id="@+id/spinneryear"
        android:layout_width="108dp"
        android:layout_height="48dp"
        android:layout_below="@+id/spinner1"
        android:layout_alignLeft="@+id/spinner1" />

    <EditText
        android:id="@+id/DateEditText"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_alignTop="@+id/DateImageButton"
        android:layout_marginRight="0dp"
        android:layout_toLeftOf="@+id/spinnerSE"
        android:background="#ffffff"
        android:editable="false"
        android:ems="10">

        <requestFocus />
    </EditText>

    <ImageButton
        android:id="@+id/DateImageButton"
        android:layout_width="88dp"
        android:layout_height="64dp"
        android:layout_below="@+id/spinnerSE"
        android:layout_alignStart="@+id/spinnerSE"
        android:layout_marginStart="14dp"
        android:layout_marginTop="22dp"
        android:cropToPadding="true"
        android:src="@drawable/calendar_icon"
        android:contentDescription="TODO" />

    <Button
        android:id="@+id/buttonsubmit"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/DateImageButton"
        android:layout_marginTop="22dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/add_attendance" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignTop="@+id/spinnerSE"
        android:layout_marginTop="20dp"
        android:text="@string/subject"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/viewTotalAttendanceButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="103dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/view_total_attendance" />

    <Button
        android:id="@+id/viewAttendancebutton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_marginBottom="35dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/view_attendance" />

    <Button
        android:id="@+id/Logout"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="123dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="45dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/logout" />

</RelativeLayout>